Final Fainl commit

--- a/Models_v1.ipynb
+++ b/Models_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "7c9f0b7e-f1ee-440f-9c14-49df371d41c8",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "4e02b22f-7515-4dc6-8f6b-77adaabb38ed",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "00555c26-26c4-49fc-aa4a-575f39164785",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "9da9b80b-4b63-4866-87c2-3cb9eb48d2ab",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "ec4a7107",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "bb74f6e1",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "95954645",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "55b520c4",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "11fe236a-9a13-4d0b-88d8-6d4ff1dda136",
    "metadata": {},
    "outputs": [
@@ -482,45 +482,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression Validation Accuracy: 0.7293\n",
+      "Logistic Regression:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.95      0.72      0.82     21855\n",
-      "         1.0       0.31      0.79      0.45      3513\n",
+      "         0.0       0.95      0.72      0.82     21884\n",
+      "         1.0       0.30      0.78      0.44      3484\n",
       "\n",
-      "    accuracy                           0.73     25368\n",
+      "    accuracy                           0.72     25368\n",
       "   macro avg       0.63      0.75      0.63     25368\n",
-      "weighted avg       0.87      0.73      0.77     25368\n",
+      "weighted avg       0.86      0.72      0.77     25368\n",
       "\n",
-      "Decision Tree Validation Accuracy: 0.7949\n",
+      "confusion matrix:\n",
+      "[[15664  6220]\n",
+      " [  769  2715]]\n",
+      "----------------------------------------------------------------\n",
+      "\n",
+      "Decision Tree:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.89      0.88      0.88     21855\n",
-      "         1.0       0.27      0.29      0.28      3513\n",
+      "         0.0       0.89      0.88      0.88     21884\n",
+      "         1.0       0.29      0.30      0.30      3484\n",
       "\n",
-      "    accuracy                           0.79     25368\n",
-      "   macro avg       0.58      0.58      0.58     25368\n",
-      "weighted avg       0.80      0.79      0.80     25368\n",
+      "    accuracy                           0.80     25368\n",
+      "   macro avg       0.59      0.59      0.59     25368\n",
+      "weighted avg       0.81      0.80      0.80     25368\n",
       "\n",
-      "Random Forest Validation Accuracy: 0.8550\n",
+      "confusion matrix:\n",
+      "[[19264  2620]\n",
+      " [ 2423  1061]]\n",
+      "----------------------------------------------------------------\n",
+      "\n",
+      "Random Forest:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.88      0.96      0.92     21855\n",
-      "         1.0       0.44      0.17      0.25      3513\n",
+      "         0.0       0.88      0.97      0.92     21884\n",
+      "         1.0       0.44      0.17      0.24      3484\n",
       "\n",
       "    accuracy                           0.86     25368\n",
       "   macro avg       0.66      0.57      0.58     25368\n",
       "weighted avg       0.82      0.86      0.83     25368\n",
       "\n",
-      "Voting Classifier Validation Accuracy: 0.8255\n",
+      "confusion matrix:\n",
+      "[[21150   734]\n",
+      " [ 2901   583]]\n",
+      "----------------------------------------------------------------\n",
+      "\n",
+      "Voting Classifier:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.90      0.90      0.90     21855\n",
-      "         1.0       0.36      0.34      0.35      3513\n",
+      "         0.0       0.90      0.91      0.90     21884\n",
+      "         1.0       0.37      0.34      0.36      3484\n",
       "\n",
       "    accuracy                           0.83     25368\n",
-      "   macro avg       0.63      0.62      0.63     25368\n",
-      "weighted avg       0.82      0.83      0.82     25368\n",
+      "   macro avg       0.63      0.63      0.63     25368\n",
+      "weighted avg       0.82      0.83      0.83     25368\n",
+      "\n",
+      "confusion matrix:\n",
+      "[[19866  2018]\n",
+      " [ 2287  1197]]\n",
+      "----------------------------------------------------------------\n",
       "\n"
      ]
     }
@@ -529,11 +549,15 @@
     "# Evaluate models on validation data and print results\n",
     "for model_name, predictions in zip(\n",
     "    [\"Logistic Regression\", \"Decision Tree\", \"Random Forest\", \"Voting Classifier\"],\n",
-    "    [log_reg_val_pred, decision_tree_val_pred, random_forest_val_pred, voting_val_pred]\n",
+    "    [log_reg_test_pred, decision_tree_test_pred, random_forest_test_pred, voting_test_pred]\n",
     "):\n",
-    "    accuracy = accuracy_score(y_val, predictions)\n",
-    "    print(f\"{model_name} Validation Accuracy: {accuracy:.4f}\")\n",
-    "    print(classification_report(y_val, predictions))"
+    "    accuracy = accuracy_score(y_test, predictions)\n",
+    "    print(f\"{model_name}:\")\n",
+    "    print(classification_report(y_test, predictions))\n",
+    "    print('confusion matrix:')\n",
+    "    print(confusion_matrix(y_test, predictions, labels=[0,1]))\n",
+    "    print('-'*64)\n",
+    "    print('')"
    ]
   }
  ],
