--- a/Models_v2.ipynb
+++ b/Models_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "import seaborn as sns\n",
     "\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from sklearn.metrics import precision_recall_fscore_support\n",
     "from sklearn.ensemble import VotingClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
     "\n",
     "# Create preprocessing pipelines for numeric and categorical features\n",
     "numeric_features = ['BMI', 'PhysHlth', 'Age']  # Non-binary variables\n",
-    "categorical_features = ['GenHlth', 'HighBP', 'HighChol', 'HeartDiseaseorAttack']  # Binary variables\n",
+    "categorical_features = ['GenHlth', 'HighBP', 'HighChol', 'HeartDiseaseorAttack', 'DiffWalk']  # Binary variables\n",
     "\n",
     "# Create preprocessing for numeric and categorical features\n",
     "numeric_transformer = Pipeline(steps=[\n",
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,209 +126,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function to calculate false negative rate\n",
-    "def calculate_fnr(y_true, y_pred):\n",
-    "    tn, fp, fn, tp = confusion_matrix(y_true, y_pred).ravel()\n",
-    "    fnr = fn / (fn + tp) if (fn + tp) > 0 else 0  # Avoid division by zero\n",
-    "    return tn, fn, tp, fp, fnr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def print_fnr(predictions, model_name):\n",
-    "    accuracy = accuracy_score(y_test, predictions)\n",
-    "    tn, fn, tp, fp, fnr = calculate_fnr(y_test, predictions)\n",
-    "    \n",
-    "    print(f\"{model_name}:\")\n",
-    "    print(f\"Test Accuracy: {accuracy:.4f}\")\n",
-    "    print(f\"true Negatives: {tn}\")\n",
-    "    print(f\"False Negatives: {fn}\")\n",
-    "    print(f\"True Positives: {tp}\")\n",
-    "    print(f\"False Positives: {fp}\")\n",
-    "    print(f\"False Negative Rate: {fnr:.4f}\")\n",
-    "    print(classification_report(y_test, predictions)) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluation of models based on validation data:\n",
-      "\n",
       "Logistic Regression:\n",
-      "Test Accuracy: 0.8372\n",
-      "true Negatives: 31684\n",
-      "False Negatives: 5021\n",
-      "True Positives: 173\n",
-      "False Positives: 1174\n",
-      "False Negative Rate: 0.9667\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.86      0.96      0.91     32858\n",
-      "         1.0       0.13      0.03      0.05      5194\n",
+      "         0.0       0.95      0.72      0.82     32858\n",
+      "         1.0       0.30      0.77      0.43      5194\n",
       "\n",
-      "    accuracy                           0.84     38052\n",
-      "   macro avg       0.50      0.50      0.48     38052\n",
-      "weighted avg       0.76      0.84      0.79     38052\n",
+      "    accuracy                           0.72     38052\n",
+      "   macro avg       0.63      0.74      0.62     38052\n",
+      "weighted avg       0.86      0.72      0.76     38052\n",
+      "\n",
+      "confusion matrix:\n",
+      "[[23570  9288]\n",
+      " [ 1220  3974]]\n",
+      "----------------------------------------------------------------\n",
       "\n",
       "Decision Tree:\n",
-      "Test Accuracy: 0.8142\n",
-      "true Negatives: 30612\n",
-      "False Negatives: 4823\n",
-      "True Positives: 371\n",
-      "False Positives: 2246\n",
-      "False Negative Rate: 0.9286\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.86      0.93      0.90     32858\n",
-      "         1.0       0.14      0.07      0.09      5194\n",
+      "         0.0       0.91      0.78      0.84     32858\n",
+      "         1.0       0.28      0.53      0.36      5194\n",
       "\n",
-      "    accuracy                           0.81     38052\n",
-      "   macro avg       0.50      0.50      0.50     38052\n",
-      "weighted avg       0.77      0.81      0.79     38052\n",
+      "    accuracy                           0.75     38052\n",
+      "   macro avg       0.59      0.66      0.60     38052\n",
+      "weighted avg       0.83      0.75      0.78     38052\n",
+      "\n",
+      "confusion matrix:\n",
+      "[[25633  7225]\n",
+      " [ 2437  2757]]\n",
+      "----------------------------------------------------------------\n",
       "\n",
       "Random Forest:\n",
-      "Test Accuracy: 0.8139\n",
-      "true Negatives: 30594\n",
-      "False Negatives: 4818\n",
-      "True Positives: 376\n",
-      "False Positives: 2264\n",
-      "False Negative Rate: 0.9276\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.86      0.93      0.90     32858\n",
-      "         1.0       0.14      0.07      0.10      5194\n",
+      "         0.0       0.91      0.83      0.87     32858\n",
+      "         1.0       0.30      0.46      0.36      5194\n",
       "\n",
-      "    accuracy                           0.81     38052\n",
-      "   macro avg       0.50      0.50      0.50     38052\n",
-      "weighted avg       0.77      0.81      0.79     38052\n",
+      "    accuracy                           0.78     38052\n",
+      "   macro avg       0.60      0.65      0.61     38052\n",
+      "weighted avg       0.82      0.78      0.80     38052\n",
+      "\n",
+      "confusion matrix:\n",
+      "[[27239  5619]\n",
+      " [ 2792  2402]]\n",
+      "----------------------------------------------------------------\n",
       "\n",
       "Voting Classifier:\n",
-      "Test Accuracy: 0.8206\n",
-      "true Negatives: 30906\n",
-      "False Negatives: 4874\n",
-      "True Positives: 320\n",
-      "False Positives: 1952\n",
-      "False Negative Rate: 0.9384\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.86      0.94      0.90     32858\n",
-      "         1.0       0.14      0.06      0.09      5194\n",
+      "         0.0       0.92      0.80      0.85     32858\n",
+      "         1.0       0.30      0.53      0.38      5194\n",
       "\n",
-      "    accuracy                           0.82     38052\n",
-      "   macro avg       0.50      0.50      0.49     38052\n",
-      "weighted avg       0.77      0.82      0.79     38052\n",
+      "    accuracy                           0.76     38052\n",
+      "   macro avg       0.61      0.67      0.62     38052\n",
+      "weighted avg       0.83      0.76      0.79     38052\n",
+      "\n",
+      "confusion matrix:\n",
+      "[[26307  6551]\n",
+      " [ 2416  2778]]\n",
+      "----------------------------------------------------------------\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Evaluate models on validation data and print results\n",
-    "print(f\"Evaluation of models based on validation data:\")\n",
-    "print(f\"\")\n",
-    "for model_name, predictions in zip(\n",
-    "    [\"Logistic Regression\", \"Decision Tree\", \"Random Forest\", \"Voting Classifier\"],\n",
-    "    [log_reg_val_pred, decision_tree_val_pred, random_forest_val_pred, voting_val_pred]\n",
-    "):\n",
-    "    print_fnr(predictions, model_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Logistic Regression:\n",
-      "Test Accuracy: 0.8669\n",
-      "true Negatives: 32291\n",
-      "False Negatives: 4497\n",
-      "True Positives: 697\n",
-      "False Positives: 567\n",
-      "False Negative Rate: 0.8658\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.88      0.98      0.93     32858\n",
-      "         1.0       0.55      0.13      0.22      5194\n",
-      "\n",
-      "    accuracy                           0.87     38052\n",
-      "   macro avg       0.71      0.56      0.57     38052\n",
-      "weighted avg       0.83      0.87      0.83     38052\n",
-      "\n",
-      "Decision Tree:\n",
-      "Test Accuracy: 0.8453\n",
-      "true Negatives: 31171\n",
-      "False Negatives: 4199\n",
-      "True Positives: 995\n",
-      "False Positives: 1687\n",
-      "False Negative Rate: 0.8084\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.88      0.95      0.91     32858\n",
-      "         1.0       0.37      0.19      0.25      5194\n",
-      "\n",
-      "    accuracy                           0.85     38052\n",
-      "   macro avg       0.63      0.57      0.58     38052\n",
-      "weighted avg       0.81      0.85      0.82     38052\n",
-      "\n",
-      "Random Forest:\n",
-      "Test Accuracy: 0.8498\n",
-      "true Negatives: 31278\n",
-      "False Negatives: 4137\n",
-      "True Positives: 1057\n",
-      "False Positives: 1580\n",
-      "False Negative Rate: 0.7965\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.88      0.95      0.92     32858\n",
-      "         1.0       0.40      0.20      0.27      5194\n",
-      "\n",
-      "    accuracy                           0.85     38052\n",
-      "   macro avg       0.64      0.58      0.59     38052\n",
-      "weighted avg       0.82      0.85      0.83     38052\n",
-      "\n",
-      "Voting Classifier:\n",
-      "Test Accuracy: 0.8536\n",
-      "true Negatives: 31512\n",
-      "False Negatives: 4226\n",
-      "True Positives: 968\n",
-      "False Positives: 1346\n",
-      "False Negative Rate: 0.8136\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.88      0.96      0.92     32858\n",
-      "         1.0       0.42      0.19      0.26      5194\n",
-      "\n",
-      "    accuracy                           0.85     38052\n",
-      "   macro avg       0.65      0.57      0.59     38052\n",
-      "weighted avg       0.82      0.85      0.83     38052\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Evaluate models on test data and print results\n",
     "for model_name, predictions in zip(\n",
     "    [\"Logistic Regression\", \"Decision Tree\", \"Random Forest\", \"Voting Classifier\"],\n",
     "    [log_reg_test_pred, decision_tree_test_pred, random_forest_test_pred, voting_test_pred]\n",
     "):\n",
-    "    print_fnr(predictions, model_name)"
+    "    accuracy = accuracy_score(y_test, predictions)\n",
+    "    print(f\"{model_name}:\")\n",
+    "    print(classification_report(y_test, predictions))\n",
+    "    print('confusion matrix:')\n",
+    "    print(confusion_matrix(y_test, predictions, labels=[0,1]))\n",
+    "    print('-'*64)\n",
+    "    print('')"
    ]
   }
  ],
